--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "webpack-dev-server": "^4.10.0"
   },
   "dependencies": {
+    "@vimeo/player": "^2.17.1",
     "gh-pages": "^4.0.0",
+    "lodash.throttle": "^4.1.1",
     "simplelightbox": "^2.10.3"
   }
 }
